--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project name="Mapillary" default="dist" basedir=".">
+<project name="MapGrid" default="dist" basedir=".">
 
   <!-- edit the properties of this plugin in the file `gradle.properties` -->
   <property file="${basedir}/gradle.properties"/>
@@ -9,9 +9,4 @@
 
   <!-- ** include targets that all plugins have in common ** -->
   <import file="../build-common.xml"/>
-
-  <fileset id="plugin.requires.jars" dir="${plugin.dist.dir}">
-    <include name="apache-commons.jar"/>
-    <include name="apache-http.jar"/>
-  </fileset>
 </project>
